feat: add scope based access control
